# sentinelle

./: .gitignore  Makefile  Pipfile  README.org  pyproject.toml
.github/: labels.json
.github/workflows/: label.yml
examples/Django/mysite/: test_settings.py
examples/Django/mysite/mysite/: settings.py
examples/Django/mysite/polls/: tests.py  urls.py  views.py
examples/Django/mysite/polls/management/commands/: start_sentinelle_server.py  start_sentinelle_server__scouty.py
examples/Django/mysite/polls/migrations/: 0001_initial.py
examples/Django/mysite/polls/templates/polls/: index.html
examples/simple/: README.org
examples/simple/concatenate/: __init__.py  concatenator.py
examples/simple/scripts/: cat.py  run_test_server.py
examples/simple/tests/: __init__.py  sample.txt  test_concatenate.py
protos/sentinelle/: sentinelle.proto
sentinelle/: __init__.py  client.py  sentinelle_pb2.py  sentinelle_pb2_grpc.py  server.py  servicer.py  utils.py
sentinelle/inspectors/: __init__.py  bare_unittest_inspector.py  django_testting_inspector.py  inspection_report.py  inspector.py  proto.py
sentinelle/interceptors/: __init__.py  global_exception_interceptor.py  logging_interceptor.py
sentinelle/secretaires/: __init__.py  git_powered_secretaire.py  history.py  secretaire.py
tests/secretaires/: test_git_powered_secretaire.py  test_history.py
